test-python.yml
#apiVersion: rbac.authorization.k8s.io/v1
#kind: Deployment
#metadata:
#  name: nginx-deployment
#spec:
#  selector:
#    matchLabels:
#      app: nginx
#  replicas: 2 
#  template:
#    metadata:
#      labels:
#        app: nginx
#    spec:
#      containers:
#      - name: nginx
#        image: nginx:1.7.9
#        ports:
#        - containerPort: 80
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.9.1
        ports:
        - containerPort: 80
#kind: Deployment
##apiVersion: extensions/v1beta1
#apiVersion: apps/v1
#metadata:
#  name: GRP-NAME-PRJ-COD
#spec:
#  replicas: 3
#  selector:
#    matchLabels:
#      deploy: Default
#  template:
#    metadata:
#      labels:
#        deploy: Default
#    spec:
#      containers:
#        - name: GRP-NAME-TKT-NUM
#          image: registry.mzdev.kr/IMAGE_PROJECT/IMAGE_NAME:IMAGE_TAG
#---
#kind: Ingress
#apiVersion: extensions/v1beta1
#metadata:
#  name: test
#spec:
#  backend:
#    serviceName: GRP-NAME-PRJ-COD
#    servicePort: 8000
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: GRP-NAME-TKT-NUM
#  namespace: dev
#  ownerReferences:
#  - apiVersion: v1beta1/extensions
#    controller: true
#    kind: Ingress
#    name: GRP-NAME-TKT-NUM
#spec:
#  ports:
#  - port: 8000
#    protocol: TCP
#    targetPort: 8000
#  type: ClusterIP
#status:
#  loadBalancer: {}
