java-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: GRP-NAME-TKT-NUM
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
      app: GRP-NAME-PRJ-COD
  type: ClusterIP
